--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,8 @@
 html,
 body {
   padding: 0;
-  margin: 10px;
+  margin: 0;
+  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -12,5 +13,11 @@ a {
 }
 
 * {
+  margin: 0;
+  color: inherit;
   box-sizing: border-box;
+}
+
+button {
+  cursor: pointer;
 }
