--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background: #f5f5f5;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  position: relative;
 }
 
 a {
