Styling and logic tweaks

--- a/features/search/search.module.css
+++ b/features/search/search.module.css
@@ -1,7 +1,7 @@
 .searchBar {
   position: sticky;
   top: -1px;
-  padding: 20px 10vw;
+  padding: 20px 48px;
   border-bottom: 1px solid #414548;
   display: flex;
   background: #21272c;
